fix: 🎨 fund feed infos on mobile

--- a/src/pages/home/feeds/index.module.scss
+++ b/src/pages/home/feeds/index.module.scss
@@ -26,9 +26,13 @@
 
 .feed_info {
   border: 0.5px white solid;
-  width: 50%;
+  width: 100%;
   margin: auto;
   padding: 1em;
   margin-bottom: 1em;
   text-align: center;
+
+  @include respond-to('desktop') {
+    width: 50%;
+  }
 }
